2006-07-12  Adam Schreiber  <sadam@clemson.edu>

    * configure.in: Actually check in the modified file.

2006-07-08  Adam Schreiber  <sadam@clemson.edu>

    * libcryptui/cryptui.pc.in: added -lcryptui to libs.
    * src/seahorse-pgp-private-key-properties.glade: Add 's' to name
    of the strength label so that the field is populated properly.
    * configure.in:
    * libcryptui/Makefile.am:
    * libcryptui/cryptui.pc.in(added): Publish pkg-config file
    so that other programs can find and link against libcryptui.

2006-07-06  Nate Nielsen  <nielsen@memberwebs.com>

    * INSTALL:
    * Makefile.am:
    * configure.in:
    * agent/seahorse-agent-ssh.c:
    * agent/seahorse-agent.c:
    * agent/seahorse-agent.h:
    * daemon/Makefile.am:
    * daemon/seahorse-daemon.c:
    * daemon/seahorse-daemon.h:
    * libseahorse/seahorse-passphrase.c:
    * libseahorse/seahorse-passphrase.h:
    * libseahorse/seahorse-prefs-cache.c:
    * libseahorse/seahorse-prefs.glade: Use DBUS to start seahorse-daemon
    and detect if it's running. Properly detect SSH and GPG agents running.
    Clean up code behind cache prefs. 

2006-07-06  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-check-button-control.c: Don't trigger 
    gconf write during initialization. 
    
2006-07-04  Nate Nielsen  <nielsen@memberwebs.com>

    * libcryptui/cryptui-key-store.c: Removed over zealous
    assertion. Fixes bug #346418
    
2006-07-02  Adam Schreiber  <sadam@clemson.edu>

    * plugins/nautilus/seahorse-tool.c: Change program name
    from seahorse, PACKAGE, to seahorse-tool.
    * src/seahorse-multi-encrypt.glade: Make entry field activate
    the default.

2006-06-28  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/Makefile.am:
    * libseahorse/seahorse-libdialogs.h:
    * libseahorse/seahorse-recipients-store.c (removed):
    * libseahorse/seahorse-recipients-store.h (removed):
    * libseahorse/seahorse-recipients.c (removed):