@@ -1,5 +1,12 @@
 2006-07-12  Adam Schreiber  <sadam@clemson.edu>
 
+    * libseahorse/seahorse-key.c:
+    * libseahorse/seahorse-key.h:
+    * libseahorse/seahorse-pgp-key.c:
+    * libseahorse/seahorse-pgp-key.h:
+    * libseahorse/seahorse-ssh-key.c:
+    * libseahorse/seahorse-ssh-key.h: Add length property to 
+    key objects.
     * configure.in: Actually check in the modified file.
 
 2006-07-08  Adam Schreiber  <sadam@clemson.edu>
